빛 효과 및 당첨 공 애니메이션 개선
- 빛 효과를 화면 전체가 밝게 빛나는 효과로 단순화
- 빛 지속 시간 증가 (2.5초)
- 당첨 공이 화면 중앙에서 5배 크기로 나타나는 효과 추가
- 당첨 공 등장 시 화면 흔들림 효과 추가
- 당첨 공에 발광 및 회전 애니메이션 적용

--- a/index.html
+++ b/index.html
@@ -15,33 +15,10 @@
     </div>
 
     <!-- 빛 효과 오버레이 -->
-    <div class="light-effect" id="lightEffect">
-        <div class="starburst">
-            <div class="ray"></div>
-            <div class="ray"></div>
-            <div class="ray"></div>
-            <div class="ray"></div>
-            <div class="ray"></div>
-            <div class="ray"></div>
-            <div class="ray"></div>
-            <div class="ray"></div>
-            <div class="ray"></div>
-            <div class="ray"></div>
-            <div class="ray"></div>
-            <div class="ray"></div>
-        </div>
-        <div class="center-glow"></div>
-        <div class="light-particles">
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-            <div class="particle"></div>
-        </div>
-    </div>
+    <div class="light-effect" id="lightEffect"></div>
+
+    <!-- 당첨 공 표시 (화면 중앙) -->
+    <div class="selected-ball" id="selectedBall"></div>
 
     <div class="container">
         <h1>경품 추첨 로또</h1>
@@ -51,7 +28,6 @@
                 <div class="machine-top">추첨기</div>
                 <canvas id="canvas"></canvas>
                 <div class="tube">
-                    <div class="selected-ball" id="selectedBall"></div>
                 </div>
             </div>
 
